# tictac-online

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  k8s-minimal.yaml  package-lock.json  tictac-k8s.yaml
client/: .dockerignore  .env.example  Dockerfile  bun.lockb  package-lock.json  package.json  svelte.config.js  vite.config.js
client/src/components/: Auth.svelte  Leaderboard.svelte  MatchHistory.svelte  Profile.svelte  RoomManager.svelte  login.svelte
client/src/lib/: api.ts  auth.ts  axios.ts  config.ts
client/src/lib/models/: user.ts
client/src/lib/stores/: auth.svelte.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/admin/: +page.svelte
client/src/routes/player/[id]/: +page.svelte
client/src/routes/profile/: +page.svelte
server/: .dockerignore  Cargo.toml  Dockerfile
server/src/: auth.rs  db.rs  elo.rs  game.rs  game_db.rs  main.rs  models.rs  netcode.rs  protocol.rs  room.rs
server/src/api/: admin.rs  auth.rs  debug.rs  games.rs  leaderboard.rs  mod.rs  profile.rs  profile_query.rs  users.rs
src/: game.rs  main.rs  netcode.rs  protocol.rs  room.rs
