[package]
name = "poker-game-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.7.0", features = ["default", "macros", "ws"] }
tokio = { version = "1.32.0", features = ["full"] }
tungstenite = { version = "0.20.0" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
futures = "0.3.28"
serde = { version = "1.0.188", features = ["default", "derive"] }
