[package]
name = "poker-game-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.7.5", features = ["default", "macros", "ws", "multipart"] }
tokio = { version = "1.37.0", features = ["full"] }
tungstenite = { version = "0.20.0" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
futures = "0.3.28"
serde = { version = "1.0.188", features = ["default", "derive"] }
surrealdb = { version = "2.3.7", features = ["kv-mem"] }
jsonwebtoken = "9.3"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
once_cell = "1.19"
thiserror = "1.0"
base64 = "0.22"
image = "0.25"
